@@ -22,37 +22,6 @@
   // "homepage": "https://github.com/massimo-cassandro/xxxxxx#readme",
   "keywords": [],
   "scripts": {
-    "*** INST BASIC ***": "npm i @massimo-cassandro/dev-utilities @massimo-cassandro/linters-config --save-dev",
-    "*** create-favicons init": "npx create-favicons init",
-    "*** INST js-utilities": "npm i --save @massimo-cassandro/js-utilities",
-    "*** INST modal-alert": "npm i --save @massimo-cassandro/modal-alert",
-    "*** INST auto-datatables-bs5": "npm i --save @massimo-cassandro/auto-datatables-bs5",
-    "*** INST json-table": "npm i --save @massimo-cassandro/json-table",
-    "*** INST js-file-uploader": "npm i --save @massimo-cassandro/js-file-uploader",
-    "*** INST autocomplete": "npm i --save @massimo-cassandro/autocomplete",
-    "*** INST scss-utilities": "npm i --save @massimo-cassandro/scss-utilities",
-    "*** INST ckeditor-utilities": "npm i --save @massimo-cassandro/ckeditor-utilities",
-    "*** INST cookie-consent": "npm i --save @massimo-cassandro/cookie-consent",
-    "*** INST sharing-links": "npm i --save @massimo-cassandro/sharing-links",
-
-    "*** INST bootstrap": "npm i --save bootstrap",
-
-    "*** INST rollup": "npm i -D rollup@latest @rollup/plugin-terser @rollup/plugin-node-resolve",
-    "*** INST @rollup/plugin-commonjs": "npm i --save @rollup/plugin-commonjs",
-    "*** INST rollup-plugin-minify-html-template-literals": "npm i --save rollup-plugin-minify-html-template-literals",
-    "*** INST rollup-plugin-string-html": "npm i --save rollup-plugin-string-html",
-    "*** INST sass cli": "npm i --save sass",
-    "*** INST postcss cli": "npm i --save  postcss postcss-cli @fullhuman/postcss-purgecss autoprefixer postcss-csso",
-    "*** INST sass+postcss gulp": "npm i --D postcss @fullhuman/postcss-purgecss autoprefixer postcss-csso sass gulp gulp-using gulp-postcss gulp-sass gulp-sourcemaps",
-    "*** normalize.css": "npm i -S normalize.css",
-
-    "*** INST webpack (contiene sass, postcss...)": "npm i -D webpack-dev-server copy-webpack-plugin @babel/core @babel/preset-env @babel/preset-react @fullhuman/postcss-purgecss autoprefixer babel-loader html-loader css-loader css-minimizer-webpack-plugin dotenv-webpack file-loader html-webpack-plugin mini-css-extract-plugin postcss postcss-csso postcss-loader sass sass-loader style-loader styled-components terser-webpack-plugin webpack webpack-cli webpack-manifest-plugin",
-
-    "*** INST fontsource": "npm i --save @fontsource/xxxxx",
-    "*** INST gulp (std icone)": "npm i --save-dev gulp@latest gulp-dom gulp-rename gulp-replace gulp-svgmin gulp-svgstore gulp-jsbeautifier gulp-concat gulp-flatmap gulp-inject-string",
-    "*** INST gulp-wrap (icone react)": "npm i --save-dev gulp-wrap",
-    "*** INST prismjs": "npm i --save-dev prismjs",
-    "*** REMOVE React test": "npm uninstall @testing-library/jest-dom @testing-library/react @testing-library/user-event web-vitals",
 
     "rollup": "npx rollup --config ./config/rollup.config.mjs --watch",
     "sass+postcss": "npm run sass-cli & npm run postcss-cli",
