@@ -1,0 +1,8 @@
+## Lista packages da installare
+
+Crea una lista delle installazioni più frequenti
+
+
+```
+npx inst-list
+```
